--- a/app/views/teams/AllTeams.scala.html
+++ b/app/views/teams/AllTeams.scala.html
@@ -1,12 +1,29 @@
-@(title: String, currentPage: com.avaje.ebean.Page[models.teams.Team], sort: String)
+@(title: String, currentPage: com.avaje.ebean.Page[models.teams.Team], sort: String, search : Form[views.formdata.SearchFormData])
+
+@import helper._
+@import bootstrap3._
 
 @Main(title) {
     
     <div class="row-search hidden-xs">
     <div class="col-md-4">
-          
-    </div>
     
+        @form(routes.Teams.searchTeams(0), 'class -> "form-inline") {
+        
+            @bootstrap3.simpleText(search("term"),
+                placeholder = "Search by Team name, location, or skill level",
+                label = "",
+                help = "")
+                
+             <span class="input-group-btn">
+              <div class="form-group">
+                  <button type="submit" id="submitButton" class="btn btn-primary glyphicon glyphicon-search"></button>
+              </div>
+              </span>
+            </div>       
+         
+        }
+  
     <div class="btn-group">
       <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
         Sort By<span class="caret"></span>
@@ -18,10 +35,10 @@
         <li><a href="@routes.Teams.allTeams("teamName asc", 0)">All</a>
       </ul>
     </div>
-    
+  
     <a href="@routes.Teams.createTeam()" class="btn btn-primary btn-md pull-right" role="button">Create a Team</a> </br>
-    
-    </div>
+      </div>
+ 
     <table class="table table-striped table-hover">
       <thead>
          <tr>
