--- a/app/views/user/Validate.scala.html
+++ b/app/views/user/Validate.scala.html
@@ -1,9 +1,56 @@
-@(title: String, isLoggedIn: Boolean)
+@(title: String, playerForm : Form[views.formdata.PlayerFormData], 
+  playerSkillMap : Map[String, Boolean], playerPositionMap: Map[String, Boolean], isLoggedIn: Boolean)
+
+@import helper._ 
+@import bootstrap3._
+@import models._
 
 @Main(title, isLoggedIn) {
    <div class="container">
    @if(isLoggedIn) {
        <p>Congratulations on Registering.</p>
+        @form(routes.Players.playerManageSubmit(), 'class -> "form-horizontal"){
+    
+        @hiddenName(playerForm("name"), value = Secured.getUserInfo(ctx()).getName() )
+            
+        @hidden(playerForm("nickname"))
+            
+        @hidden(playerForm("picUrl"))
+      
+        @text(playerForm("homeCourt"),
+            label = "Home Court",
+            placeholder = "Kapolei Park",
+            help = "Your home court")
+            
+        @bootstrap3.select(playerForm("skill"),
+            label = "Skill",
+            optionMap = playerSkillMap,
+            isMultiple = false,
+            help = "Your skill level.")
+            
+        @bootstrap3.select(playerForm("position"),
+            label = "Position",
+            optionMap = playerPositionMap,
+            isMultiple = false,
+            help = "The positions you play.")
+            
+        @hidden(playerForm("height"))
+            
+        @hidden(playerForm("weight"))
+            
+        @hidden(playerForm("bio"))
+            
+        @hidden(playerForm("lookingFor"))
+            
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button id="submitButton" type="submit" class="btn btn-info">
+                Submit
+            </button>
+          </div>
+        </div>
+      }
+       
    } else {
        <p>An error occurred. Please register again.</p>
    }
