--- a/app/views/player/PlayerProfile.scala.html
+++ b/app/views/player/PlayerProfile.scala.html
@@ -1,4 +1,4 @@
-@(title: String, player: Player, isLoggedIn: Boolean, user: User, playerGames: List[models.games.Game]) 
+@(title: String, player: Player, isLoggedIn: Boolean, user: User, playerGames: List[models.games.Game], playerTeams: List[models.teams.Team]) 
 
 @import helper._
 @import models._
@@ -78,7 +78,30 @@
           <div id="bio" class="tab-pane fade in active">
             <div class="container ">
               <h5><small>About Me: </small>  @player.getBio() </h5>
-              <h5><small>Teams: </small>   </h5>
+              <table class="table table-striped table-hover">
+              <thead>
+                 <tr>
+                    <th>Team Name</th>
+                    <th>Location</th>
+                    <th>Type</th>
+                    <th>Roster Size</th>
+                    <th class="hidden-xs">Skill Level</th>
+                 </tr>
+              </thead>
+              <tbody data-link="row" class="rowlink">
+                @for(team <- playerTeams) {
+                 @if(team.getRoster().contains(player.getUser.getName())) {
+                 <tr>
+                    <td><a href="@routes.Teams.showTeam(team.getId)">@team.getTeamName()</a></td>
+                    <td>@team.getLocation()</td>
+                    <td>@team.getTeamType()</td>
+                    <td>@team.getRosterList().size()</td>
+                    <td class="hidden-xs">@team.getSkillLevel()</td>
+                 </tr>
+                 }
+                }
+              </tbody>
+           </table>
             </div> <!-- contatiner (for carousel) -->
             
             
@@ -113,69 +136,7 @@
               }
               </tbody>
             </table>
-            <!--<table class="table table-striped table-hover">
-              <thead>
-                <tr>
-                  <th>Time</th>
-                  <th>Location</th>
-                  <th>Date</th>
-                  <th>Day</th>
-                  <th class="hidden-xs">Frequency</th>
-                  <th class="hidden-xs">Type</th>
-                  <th class="hidden-xs">Number of Players</th>
-                </tr>
-              </thead>
-              <tbody data-link="row" class="rowlink">
-                <tr>
-                  <td><a id="noColor" href="games/Game1.html">9:00 a.m.</a></td>
-                  <td>Kaimuki Community Park</td>
-                  <td>2/13</td>
-                  <td>Th</td>
-                  <td class="hidden-xs">Recurring</td>
-                  <td class="hidden-xs">Public</td>
-                  <td class="hidden-xs">6</td>
-                </tr>
-                <tr>
-                  <td><a id="noColor" href="games/Game2.html">5:00 p.m.</a></td>
-                  <td>Stan Sherrif Center</td>
-                  <td>2/15</td>
-                  <td>Sat</td>
-                  <td class="hidden-xs">One Time</td>
-                  <td class="hidden-xs">Private</td>
-                  <td class="hidden-xs">10</td>
-                </tr>
-                <tr>
-                  <td><a id="noColor" href="games/Game3.html">1:30 p.m.</a></td>
-                  <td>Kahala Community Park</td>
-                  <td>2/14</td>
-                  <td>Fri</td>
-                  <td class="hidden-xs">Recurring</td>
-                  <td class="hidden-xs">Public</td>
-                  <td class="hidden-xs">4</td>
-                </tr>
-                <tr>
-                  <td><a id="noColor" href="games/Game4.html">3:30 p.m.</a></td>
-                  <td>24 Hour Fitness - Hawai Kai</td>
-                  <td>2/14</td>
-                  <td>Fri</td>
-                  <td class="hidden-xs">One Time</td>
-                  <td class="hidden-xs">Private</td>
-                  <td class="hidden-xs">6</td>
-                </tr>
-                <tr>
-                  <td><a id="noColor" href="games/Game5.html">5:30 a.m.</a></td>
-                  <td>Kalakaua Community Park</td>
-                  <td>2/16</td>
-                  <td>Sun</td>
-                  <td class="hidden-xs">Recurring</td>
-                  <td class="hidden-xs">Public</td>
-                  <td class="hidden-xs">6</td>
-                  </a>
-                </tr>
-              </tbody>
-            </table>
-          </div> <!-- schedule -->
-
+            
         </div> <!-- myTabContent -->
         
       </div> <!-- well -->
